--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1,3 +1,29 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
+
+h1{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    font-size: 1.5em;
+}
+
+.body{
+    margin-top: 8em;
+}
+
+.center{
+    align-content: center;
+    text-align: center;
+}
+
+.blisen{
+    color: #000090;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------------- Non Perso ------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+
+
 body {
   background-color:#c5efff;
 }
