New home version (misunderstanding of the rule)

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -19,6 +19,22 @@ h1{
     color: #000090;
 }
 
+.button-m{
+    display: inline-block;
+    width: 100%;
+    padding: 1em 2em;
+
+    background-color: #de4f4f;
+    color: white;
+
+    margin: 0.1em 0;
+}
+    .button-m:hover{
+        background-color: #ce2f2f;
+        color: white;
+        text-decoration: none;
+    }
+
 /*----------------------------------------------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------------- Non Perso ------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------------------------------------------------------------------*/
