Panel admin datas is now reachable

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -35,6 +35,30 @@ h1{
         text-decoration: none;
     }
 
+
+/*-------------------------------------------------------------- Nav ---------------------------------------------------------------------*/
+
+nav{
+
+}
+
+nav a{
+    display: inline-block;
+    width: 25em;
+    padding: 1em 2em;
+
+    background-color: #de4f4f;
+    color: white;
+
+    margin: 0.1em 1em;
+}
+    nav a:hover{
+        background-color: #ce2f2f;
+        color: white;
+        text-decoration: none;
+    }
+
+
 /*----------------------------------------------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------------- Non Perso ------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------------------------------------------------------------------*/
