--- a/style/css/main.css
+++ b/style/css/main.css
@@ -39,7 +39,7 @@ h1{
 /*-------------------------------------------------------------- Nav ---------------------------------------------------------------------*/
 
 nav{
-
+    margin-bottom: 2em;
 }
 
 nav a{
@@ -57,6 +57,31 @@ nav a{
         color: white;
         text-decoration: none;
     }
+
+
+/*------------------------------------------------------------- Listes -------------------------------------------------------------------*/
+
+.promotionListPanel{
+    width: 100%;
+
+    background-color: white;
+}
+
+.promotionListPanel h1{
+    display: inline-block;
+    width: 100%;
+
+    border-bottom: solid 1px #dedede;
+}
+
+
+/*------------------------------------------------------------- width% -------------------------------------------------------------------*/
+
+.w75{
+    width: 75%;
+}
+
+
 
 
 /*----------------------------------------------------------------------------------------------------------------------------------------*/
