--- a/style/css/main.css
+++ b/style/css/main.css
@@ -107,6 +107,9 @@ nav a{
     .promotionListPanel ul li:nth-child(2n+1){
         background-color: #efefef;
     }
+    .promotionListPanel ul li:hover{
+        background-color: #dddddd;
+    }
 
 
 /*------------------------------------------------------------- width% -------------------------------------------------------------------*/
