--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
 
+
+[aria-hidden=true] {visibility: hidden;}
+
+
 h1{
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
