--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
 
 
-[aria-hidden=true] {visibility: hidden;}
+/*[aria-hidden=true] {visibility: hidden; display: none}
+[aria-hidden=false] {visibility: visible; display: inline-block};*/
 
 
 h1{
@@ -17,6 +18,12 @@ h1{
 .center{
     align-content: center;
     text-align: center;
+}
+.right{
+    text-align: right;
+}
+.left{
+    text-align: left;
 }
 
 .blisen{
@@ -97,10 +104,10 @@ nav a{
 }
 
 .promotionListPanel ul li{
-    display: inline-block;
+    display: block;
 
     width: inherit;
-    height: 3em;
+    height: 5em;
     padding: 1em 2em;
 
     text-align: center;
