--- a/style/css/main.css
+++ b/style/css/main.css
@@ -71,6 +71,10 @@ nav a{
 
 
 /*------------------------------------------------------------- Listes -------------------------------------------------------------------*/
+.limitedHeight{
+    height: 56vh;
+    overflow: auto;
+}
 
 .promotionListPanel{
     width: 100%;
