--- a/style/css/main.css
+++ b/style/css/main.css
@@ -12,7 +12,7 @@ h1{
 }
 
 .body{
-    margin-top: 8em;
+    margin-top: 2em;
 }
 
 .center{
@@ -72,7 +72,7 @@ nav a{
 
 /*------------------------------------------------------------- Listes -------------------------------------------------------------------*/
 .limitedHeight{
-    height: 56vh;
+    max-height: 66vh;
     overflow: auto;
 }
 
@@ -165,6 +165,38 @@ nav a{
         background-color: #dddddd;
     }
 
+/*------------------------------------------------------------- Data -------------------------------------------------------------------*/
+
+table{
+    width: 100%;
+    border: black 1px solid;
+    text-align: center;
+}
+table th{
+    border-top: black 1px solid;
+    border-bottom: black 1px solid;
+    text-align: center;
+}
+
+table td, table th{
+    border-top: black 1px solid;
+    border-bottom: black 1px solid;
+    width: 10%;
+}
+
+table tr:nth-child(2n){
+    background-color: #fff;
+}
+
+table tr:nth-child(2n+1){
+    background-color: #efefef;
+}
+
+table tr:hover{
+    background-color: #dddddd;
+}
+
+
 /*------------------------------------------------------------- width% -------------------------------------------------------------------*/
 
 .w75{
@@ -180,7 +212,7 @@ nav a{
 
 
 body {
-  background-color:#c5efff;
+    background-color:#c5efff;
 }
 
 .caseBody {
