upload iframe insertion

--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,13 @@ nav a{
         background-color: #dddddd;
     }
 
+/*------------------------------------------------------------- Upload Iframe -------------------------------------------------------------------*/
+.uploadIframe{
+    width: 98%;
+    margin: 1%;
+    min-height: 20em;
+}
+
 /*------------------------------------------------------------- Data -------------------------------------------------------------------*/
 
 table{
