renew Iframe btn

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,8 @@ nav a{
     width: 98%;
     margin: 1%;
     min-height: 20em;
+    border: gray 1px solid;
+    border-radius: 5px;
 }
 
 /*------------------------------------------------------------- Data -------------------------------------------------------------------*/
